security: Remove hardcoded Google API key

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 # Django Backend API URL
 VITE_API_BASE_URL=http://localhost:8000
+
+# Google Places API Key (Optional - Local Development Only)
+# Uncomment and add your API key to enable address autocomplete
+# VITE_GOOGLE_API_KEY=your_google_api_key_here
