--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
 # Production Environment Variables for Vercel Deployment
 # Django Backend API URL (Render)
 VITE_API_BASE_URL=https://educard-backend-zgz9.onrender.com
+
+# Google Places API - Disabled for production deployments
+# VITE_GOOGLE_API_KEY=
