--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "npm run build",
+  "buildCommand": "VITE_API_BASE_URL=https://educard-backend-zgz9.onrender.com npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": null,
@@ -22,8 +22,5 @@
         }
       ]
     }
-  ],
-  "env": {
-    "VITE_API_BASE_URL": "https://educard-backend-zgz9.onrender.com"
-  }
+  ]
 }
